--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "gh-pages": "^6.1.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.2",
     "typescript": "^5.3.3"
